# nim-model-router

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/release-notes/: v0.2.0.md  v0.3.0.md
.github/workflows/: ci.yml  publish.yml
config/: models.yaml
src/nim_model_router/: __init__.py  auth.py  catalog.py  classifier.py  cli.py  client.py  config.py  cost.py  fallback.py  logging_store.py  metrics.py  models.yaml  policies.py  proxy.py  router.py  types.py
tests/: test_catalog.py  test_classifier.py  test_cli.py  test_client.py  test_cost.py  test_fallback.py  test_logging_store.py  test_metrics.py  test_policies.py  test_proxy.py  test_router.py
