[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nim-model-router"
version = "0.3.0"
description = "OpenAI-compatible proxy that routes requests to the best NVIDIA NIM model by task"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Cobus Greyling", email = "7868717+cobusgreyling@users.noreply.github.com" }]
keywords = ["nvidia", "nim", "llm", "router", "proxy", "openai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "prometheus-client>=0.20,<1.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "pyyaml>=6.0,<7.0",
  "rich>=13.7,<14.0",
  "tiktoken>=0.7,<1.0",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=5.0,<6.0",
  "respx>=0.21,<1.0",
  "ruff>=0.4,<1.0",
]
llm-classifier = ["openai>=1.0,<2.0"]

[project.urls]
Homepage = "https://github.com/cobusgreyling/nim-model-router"
Repository = "https://github.com/cobusgreyling/nim-model-router"
"Bug Tracker" = "https://github.com/cobusgreyling/nim-model-router/issues"
Changelog = "https://github.com/cobusgreyling/nim-model-router/blob/main/CHANGELOG.md"

[project.scripts]
nim-router = "nim_model_router.cli:app"

[project.entry-points."nim_model_router.classifiers"]
# Register custom classifiers: mypkg.module:my_classifier_fn

[tool.hatch.build.targets.wheel]
packages = ["src/nim_model_router"]

[tool.hatch.build.targets.sdist]
include = ["src/nim_model_router", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = ["ignore:StarletteDeprecationWarning"]

[tool.coverage.run]
source = ["nim_model_router"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]